--- a/composer.json
+++ b/composer.json
@@ -35,7 +35,8 @@
         "preferred-install": {
             "*": "dist"
         },
-        "sort-packages": true
+        "sort-packages": true,
+        "process-timeout": 0
     },
     "autoload": {
         "psr-4": {
@@ -61,6 +62,7 @@
             "cache:clear": "symfony-cmd",
             "assets:install %PUBLIC_DIR%": "symfony-cmd"
         },
+
         "post-install-cmd": [
             "@auto-scripts"
         ],
